[package]
name = "ascii-grep"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.8", features = ["derive"] }
serde = { version = "1.0.192", features = ["derive"] }

[build-dependencies]
bincode = "1.3.3"
serde = { version = "1.0.192", features = ["derive"] }
